

==============================
Release 5.4.1.0
==============================
2015-09-22    EnumerationComboBox: Take type from the SelectedItem as fallback if EnumType is not set


==============================
Release 5.4.0.0
==============================
2015-08-27    EnumerationComboBox: Renew the control with more possibility how to display the values (Thanks to Christoph Dreßler!)
2015-08-05    NumberBox: When value is null step up and step down starts from the minimum or maximum value (Thanks to Thomas Kortschack!)
2015-08-04	  NumberBox: Handle up and down steps differently in the case of an invalid value
              NumberBox: Add support for a null default value (Thanks to Thomas Kortschack!)
2015-07-20	  BindingExtension: Added BindingExtension to be able to change all binding parameters by another bindings
2015-05-02    CutTooltipBehavior: Add CutTooltipBehavior
2015-03-01    ColumnWidthBehavior: A dependency property of was registered for the wrong type
2014-10-28    EllipsedProgressBar: Handle it when the element is collapsed on load and enabled later
2014-08-31    ShowBrowseButton was not working in the BrowseTextBox
2014-08-24    The change of the ContentAlignment in the EnhancedTextBox has affected the mouse cursor too


==============================
Release 5.2.0.0
==============================
2014-06-27    EnhancedTreeView: Add command to be executed if the selected item is changed
2014-06-26    EnhancedTreeViewItem: Correct binding of ContentStretching if its set on the parent tree only
2014-06-25    NavigationBar: Add NavigationBar
2014-06-08    NullToBooleanConverter, NullToVisibilityConverter: Make converters sealed
              WPFMessageBox: The background control should be behind the buttons panel as well
              WPFMessageBox: Take care about the focus
              WPFMessageBox: The background can hold an additional object
              WPFMessageBox: Add style options to modify element